--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,20 @@
-.App {
-  text-align: center;
+.my-salon-sidebar{
+  height:100vh;
+  background-color: black;
+  padding:20px 10px
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.my-salon-sidebar a{
+  text-decoration: none;
+  font-size: 22px;
+  font-weight: 600;;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  border-radius: 8px;
 }
-
-.App-link {
-  color: #61dafb;
+.my-salon-sidebar a:hover{
+  background-color:rgba(65, 63, 63, 0.623);
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.my-salon-link{
+  color:white;
+  padding:10px 20px;
 }
