Integrations component completed

--- a/src/components/app/promote/promote-css/Deals.css
+++ b/src/components/app/promote/promote-css/Deals.css
@@ -227,6 +227,7 @@ body{
     @media (max-width:900px){
       .my-deals-container{
         flex-wrap: wrap;
+        padding:10px;
       }
       .text-b1{
         width:95%;
