--- a/src/components/app/promote/promote-css/SideMenu.css
+++ b/src/components/app/promote/promote-css/SideMenu.css
@@ -39,6 +39,10 @@
     width:100%;
     margin-top:4px;
   }
+  .side-menu-wrapper-2{
+    margin-top:10px;
+    margin-left: 10px;
+  }
 
   @media all and (max-width : 850px){
     .side-menu-container,.side-menu-toggler-arrow{
@@ -47,6 +51,6 @@
   }
   @media all and (min-width : 850px){
     .side-menu-wrapper-2{
-      display:none
+      display:none;
     }
   }
