--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,40 @@
-.my-salon-sidebar{
-  height:100vh;
-  background-color: black;
-  padding:20px 10px
+.my-salon-navbar{
+  background-color: #4e4e4e;
+  padding: 20px 10px;
+  height: 100vh;
 }
-
-.my-salon-sidebar a{
-  text-decoration: none;
-  font-size: 22px;
-  font-weight: 600;;
-  display: flex;
-  border-radius: 8px;
-}
-.my-salon-sidebar a:hover{
-  background-color:rgba(65, 63, 63, 0.623);
-}
-.my-salon-link{
+.my-salon-navbar a .salon-nav-link{
   color:white;
-  padding:10px 20px;
+  padding: 15px 20px;
+  border-radius: 6px;
+  display: flex;
 }
-
-@media (max-width:900px){
-  .my-salon-sidebar{
+.my-salon-navbar .salon-nav-link{
+  margin-top: 20px;
+}
+.my-salon-navbar a{
+  text-decoration: none;
+}
+.my-salon-navbar a .salon-nav-link:hover{
+  background-color:rgb(167, 153, 153);
+}
+.my-salon-topbar{
+  width: 100%;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.25);
+  padding-top: 5px;
+  padding-left: 5px;
+}
+.my-salon-nav-text{
+  color:white;
+  padding-left: 15px;
+  font-size: 22px;
+  font-weight: 700;
+}
+@media (max-width:900px) {
+  .my-salon-navbar{
+    display: none;
+  }
+  .my-salon-topbar{
     display: none;
   }
 }
