--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,27 @@
 a{
   text-decoration: none;
 }
-.my-salon-navbar{
+.my-salon-navbar, .my-salon-navbar-off-canvas{
   background-color: #4e4e4e;
   padding: 20px 10px;
   height: 100vh;
 }
-.my-salon-navbar a .salon-nav-link{
+.my-salon-navbar a .salon-nav-link, .my-salon-navbar-off-canvas a .salon-nav-link{
   color:white;
   padding: 15px 20px;
   border-radius: 6px;
   display: flex;
 }
-.my-salon-navbar .salon-nav-link{
+.my-salon-navbar .salon-nav-link, .my-salon-navbar-off-canvas .salon-nav-link{
   margin-top: 20px;
 }
-.my-salon-navbar a{
+.my-salon-navbar a, .my-salon-navbar-off-canvas a{
   text-decoration: none;
 }
-.my-salon-navbar a .salon-nav-link:hover{
+.my-salon-navbar a .salon-nav-link:hover, .my-salon-navbar-off-canvas a .salon-nav-link:hover{
+  background-color:rgb(167, 153, 153);
+}
+.my-salon-navbar-off-canvas a .salon-nav-link:active{
   background-color:rgb(167, 153, 153);
 }
 .my-salon-topbar{
@@ -33,11 +36,15 @@ a{
   font-size: 22px;
   font-weight: 700;
 }
+.mobile-navbar{
+  display: none;
+}
+
 @media (max-width:900px) {
   .my-salon-navbar{
     display: none;
   }
-  .my-salon-topbar{
-    display: none;
+  .mobile-navbar{
+    display: block;
   }
 }
